--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 description = "A simple touch rip off that can add custom text in the begining."
 license = "MIT"
+homepage = "https://github.com/BangariSaiAnvesh/riptouch"
+repository = "https://github.com/BangariSaiAnvesh/riptouch"
+keywords = ["touch", "cli", "custom text"]
+categories = ["command-line-utilities"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
