--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ repository = "https://github.com/BangariSaiAnvesh/riptouch"
 keywords = ["touch", "cli", "custom text"]
 categories = ["command-line-utilities"]
 include = [
-    "**/*.rs",
+    "main.rs",
     "Cargo.toml",
 ]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
