--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A simple touch rip off that can add custom text in the begining."
 license = "MIT"
+readme = "README.md"
 homepage = "https://github.com/BangariSaiAnvesh/riptouch"
 repository = "https://github.com/BangariSaiAnvesh/riptouch"
 keywords = ["touch", "cli", "custom text"]
